--- a/springboot-06-dubbo/consumer-user/pom.xml
+++ b/springboot-06-dubbo/consumer-user/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.atguigu</groupId>
     <artifactId>consumer-user</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <packaging>jar</packaging>
 
     <name>consumer-user</name>
