--- a/springboot-02-amqp/pom.xml
+++ b/springboot-02-amqp/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.atguigu</groupId>
     <artifactId>springboot-02-amqp</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <packaging>jar</packaging>
 
     <name>springboot-02-amqp</name>
