--- a/springboot-05-security/pom.xml
+++ b/springboot-05-security/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.atguigu</groupId>
     <artifactId>springboot-05-security</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <packaging>jar</packaging>
 
     <name>springboot-05-security</name>
