--- a/springboot-06-dubbo/provider-ticket/pom.xml
+++ b/springboot-06-dubbo/provider-ticket/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.atguigu</groupId>
     <artifactId>provider-ticket</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <packaging>jar</packaging>
 
     <name>provider-ticket</name>
