--- a/springboot-08-actuator/pom.xml
+++ b/springboot-08-actuator/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.atguigu</groupId>
     <artifactId>springboot-08-actuator</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <packaging>jar</packaging>
 
     <name>springboot-08-actuator</name>
